--- a/3D.md
+++ b/3D.md
@@ -1,13 +1,18 @@
 # 3D,下面给出了所有的转化属性
 <p>transform()该属性向元素应用2D和3D转换，允许我们对元素进行旋转，缩放，移动和倾斜;</p>
-<p style="padding-left:15px; border-left:3px solid skylue">
+<p>
   transform-origin()属性允许改变被转化元素的位置;<br/>
   语法:transform-origin:x y z;<br/>
   x:规定元素旋转基点的x轴坐标，属性值可以是left,right,top,bottom和%;<br/>
   y:规定元素旋转基点的y轴坐标，属性值可以是left,right,top,bottom和%;<br/>
   z:只有3D旋转的时候才会用到，规定元素旋转基点的z轴坐标，属性值只能是length;<br/>
 </p>
-<p></p>
+<p>
+  transform-style()规定如何在3D空间呈现被嵌套的元素;<br/>
+  语法:transform-style(flat | preseve-3d)<br/>
+  flat:默认值，子元素不保留其3D位置；<br/>
+  preseve-3D:子元素保留其3D位置：<br/>
+</p>
 <p></p>
 <p></p>
 <p></p>
